--- a/services/bulletin-service/package.json
+++ b/services/bulletin-service/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@nats-io/nats-core": "^3.0.0-51",
     "@types/node": "^22.13.5",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
